# Better-Gemini

./: .gitignore  AGENTS.md  README.md  __init__.py  pyproject.toml  requirements.txt
better_gemini/: __init__.py  core.py  extension.py  genai_client.py
docs/: LEARNINGS.md
tests/: test_core.py  test_genai_client.py
